# firehole

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
docs/: certificates.md  development.md  index.md  installation.md  usage.md
docs/proxies/ftp/: index.md
docs/proxies/ftp/vulnerabilities/: CVE-2011-2523.md
docs/proxies/http/: index.md
docs/proxies/http/vulnerabilities/: CVE-2014-6287.md  CVE-2016-10073.md
docs/proxies/mysql/: index.md
docs/proxies/mysql/vulnerabilities/: CVE-2012-2122.md
docs/proxies/smb/: index.md
docs/proxies/smb/vulnerabilities/: CVE-2024-99999.md
examples/proxy/: proxy.py
examples/proxy/vulnerabilities/vulnerability/: main.py
src/firehole/: main.py
src/firehole/abstract/: proxy.py  vulnerability.py
src/firehole/http_s/: http_server.py  proxy.py  proxy_server.py  vulnerable_response.html
src/firehole/http_s/vulnerabilities/: abstract.py
src/firehole/http_s/vulnerabilities/cve_2014_6287/: main.py
src/firehole/http_s/vulnerabilities/cve_2016_10073/: main.py
src/firehole/proxies/: __init__.py
src/firehole/proxies/ftp/: proxy.py
src/firehole/proxies/ftp/vulnerabilities/cve_2011_2523/: main.py
src/firehole/proxies/http_/: proxy.py
src/firehole/proxies/http_/vulnerabilities/cve_2014_6287/: main.py
src/firehole/proxies/http_/vulnerabilities/cve_2016_10073/: main.py
src/firehole/proxies/mysql/: proxy.py
src/firehole/proxies/mysql/vulnerabilities/: vulnerability.py
src/firehole/proxies/mysql/vulnerabilities/cve_2012_2122/: main.py
src/firehole/proxies/smb/: proxy.py
src/firehole/proxies/smb/vulnerabilities/cve_2024_99999/: main.py
src/firehole/utility/: helpers.py  logger.py  settings.py
tests/e2e/http_s/: server.py
