[tool.poetry]
name = "firehole"
version = "0.2.0"
description = ""
authors = [
    "Jiří Rája <raja@ics.muni.cz>",
    "Daniel Volf <248688@mail.muni.cz>",
]
maintainers = [
    "Jiří Rája <raja@ics.muni.cz>",
    "Daniel Volf <248688@mail.muni.cz>",
]
readme = "README.md"
packages = [{include = "firehole", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
PyYAML = "^6.0.1"
structlog = "^24.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^9.0.0"
mike = "^2.0.0"

[tool.poetry.scripts]
firehole = 'firehole.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
