[tool.poetry]
name = "firehole"
version = "0.3.0"
description = ""
authors = [
    "Jiří Rája <raja@ics.muni.cz>",
]
maintainers = [
    "Jiří Rája <raja@ics.muni.cz>",
]
readme = "README.md"
packages = [{include = "firehole", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
PyYAML = "^6.0.1"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.3.1"
mkdocs-material = "^9.0.0"
mike = "^2.0.0"

[tool.poetry.scripts]
firehole = 'firehole.main:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
